# axum-governor

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  lefthook.yml  package.json
.cargo/: config.toml
.github/: dependabot.yml
examples/: basic.rs  demo.rs  per_tier.rs  stacked.rs
spec/: roadmap.md  testing.md
spec/architecture/: 01-overview.md  02-prior-art.md  03-key-extraction.md  04-quota-and-policy.md  05-response-and-headers.md  06-runtime-and-lifecycle.md  07-ergonomics-and-testing.md
src/: boxed.rs  builder.rs  config.rs  error.rs  extractor.rs  gc.rs  glob.rs  headers.rs  layer.rs  lib.rs  limiters.rs  middleware.rs  quota.rs  response.rs  service.rs  snapshot.rs  test_utils.rs  tracker.rs  util.rs
src/extractor/: compound.rs  cookie.rs  extension.rs  global.rs  header.rs  mod.rs  peer_ip.rs  smart_ip.rs
tests/: integration.rs
