[package]
name = "axum-governor"
version = "0.1.0"
edition = "2024"
description = "A axum plugin backend by lazy-limit"
license = "MIT"
repository = "https://github.com/canmi21/axum-governor"
readme = "README.md"
keywords = ["network", "server", "limit", "web", "router"]
categories = ["network-programming", "web-programming", "development-tools"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1"