[package]
name = "axum-governor"
version = "2.0.0"
categories = ["network-programming", "web-programming"]
edition = "2024"
keywords = ["axum", "middleware", "ratelimit", "governor", "tower"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/canmi21/axum-governor"
rust-version = "1.95"
description = "Rate limiting middleware for Axum, powered by governor."

[features]
default = []

[dependencies]

[dev-dependencies]
