[package]
name = "axum-governor"
version = "2.0.1"
categories = ["network-programming", "web-programming"]
edition = "2024"
keywords = ["axum", "middleware", "ratelimit", "governor", "tower"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/canmi21/axum-governor"
rust-version = "1.95"
description = "Rate limiting middleware for Axum, powered by governor."

[features]
default = ["dashmap", "tracing", "json"]
dashmap = ["dep:dashmap", "governor/dashmap"]
tracing = ["dep:tracing"]
json = ["dep:serde_json"]
test-utils = []

[dependencies]
axum = "0.8"
dashmap = { version = "6", optional = true }
forwarded-header-value = "0.1"
governor = { version = "0.10", default-features = false, features = ["std"] }
http = "1"
ipnet = "2"
nonzero_ext = "0.3"
pin-project-lite = "0.2"
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tower = "0.5"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "integration"
required-features = ["test-utils"]
